--- a/plugin/xn_vcode/hook/post_message_after.htm
+++ b/plugin/xn_vcode/hook/post_message_after.htm
@@ -1,8 +1,6 @@
 <?php 
-$kv_vcode = kv_get('vcode');
-if(vcode_on($kv_vcode) && (!empty($kv_vcode['vcode_thread_create_on']) && $route == 'thread' || !empty($kv_vcode['vcode_post_create_on']) && $route == 'post')) {
-	
-	
+$kv_vcode_ = kv_get('vcode');
+if(!empty($kv_vcode['vcode_thread_create_on']) && $action == 'thread') {
 ?>
 	<div class="media">
 		<div class="media-body col-lg-3 p-0">
