--- a/plugin/xn_vcode/hook/user_create_password_after.htm
+++ b/plugin/xn_vcode/hook/user_create_password_after.htm
@@ -1,6 +1,6 @@
 <?php
 $kv_vcode = kv_get('vcode');
-if(!empty($kv_vcode['vcode_user_create_on']) && vcode_on($kv_vcode)) {
+if(!empty($kv_vcode['vcode_user_create_on'])) {
 ?>
 	<div class="media">
 		<div class="media-body">
